<resources>
    <string name="app_name">MetaTasker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_existing_user_signup_now">Not a Existing User Signup Now</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_log_in_now">Already a User Log in Now</string>
    <string name="enter_name">Enter Name</string>
    <string name="setup">SetUp</string>
    <string name="do_it_later_log_out">Do It Later Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
