<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#333333"
    tools:context=".SetupActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:padding="15dp"
        android:gravity="center"
        android:layout_width="match_parent">

        <EditText

            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:hint="@string/enter_name"
            android:textSize="17sp"
            android:textColorHint="#000000"
            android:focusable="true"
            android:textColor="#000000"
            android:padding="8dp"
            android:ems="20"
            />

        <Button
            android:layout_below="@id/name"
            android:id="@+id/set_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/setup"
            android:textColor="#ffffff"
            android:background="@drawable/login_button"
            android:onClick="setup"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/latter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/do_it_later_log_out"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:onClick="later"/>


    </RelativeLayout>

</RelativeLayout>
